deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sam2-nodejs-web-deployment
  labels:
    app: sample2-nodejs
spec:
  replicas: 4
  selector:
    matchLabels:
      app: sample2-nodejs
  template:
    metadata:
      labels:
        app: sample2-nodejs
    spec:
      containers:
      - name: sample2-nodejs
        image: node:latest
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 60            
        ports:
        - containerPort: 5000
        command:
#         - sleep
#         - "3600"
        - node
        - /usr/src/app/server2.js
        volumeMounts:
          - mountPath: /usr/src/app
            name: serverjs2
      volumes:
        - configMap:
            name: simnodejsweb
          name: serverjs2


          
#https://kubernetes.io/docs/tasks/inject-data-application/environment-variable-expose-pod-information/
