ingress-nginx2a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample1-ingress
  annotations:
    haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: k8saweb2.alexlau.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sam2-service
            port:
              number: 5001
